--- a/src/App.css
+++ b/src/App.css
@@ -134,12 +134,23 @@ button {
   width: 1.8rem;
   padding: 0.25rem;
   margin: 0.25rem;
-  border: 1px solid black;
-  box-shadow: 0 0 4px black;
+  border: 2px solid darkgray;
+  box-shadow: 0 0 4px darkgray;
   border-radius: 5px;
   font-size: 1.2rem;
   font-weight: 500;
   cursor: pointer;
+  transition: all 50ms ease-in-out;
+}
+
+.keyboard-key:focus {
+  border: 2px solid black;
+  box-shadow: 0 0 4px black;
+  transform: scale(1.1);
+}
+
+.keyboard-key:hover {
+  transform: scale(1.1);
 }
 
 .keyboard-hint {
